<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="activity.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_layout"
                android:layout_marginTop="@dimen/edit_text_height">

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_fullname"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:backgroundTint="@color/editTextSelected"
                    android:textColor="@color/textColorDark"
                    android:textColorHighlight="@color/textHintColor"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_layout"
                android:layout_marginTop="@dimen/edit_text_gap">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_email"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:backgroundTint="@color/editTextSelected"
                    android:textColor="@color/textColorDark"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_layout"
                android:layout_marginTop="@dimen/edit_text_gap">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:backgroundTint="@color/editTextSelected"
                    android:textColor="@color/textColorDark"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_layout"
                android:layout_marginTop="@dimen/edit_text_gap">

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:backgroundTint="@color/editTextSelected"
                    android:textColor="@color/textColorDark"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_layout"
                android:layout_marginTop="@dimen/edit_text_gap">

                <EditText
                    android:id="@+id/mobile_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_mobile_phonenumber"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:backgroundTint="@color/editTextSelected"
                    android:singleLine="true"
                    android:textColor="@color/textColorDark"
                    android:textColorHighlight="@color/textHintColor"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_layout"
                android:layout_marginTop="@dimen/edit_text_gap">

                <EditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_otp"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:maxLength="5"
                    android:backgroundTint="@color/editTextSelected"
                    android:singleLine="true"
                    android:textColor="@color/textColorDark"
                    android:textColorHighlight="@color/textHintColor"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_gap"
                android:background="@drawable/button_outline"
                android:text="@string/action_sign_up"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/font_size_hint"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_signup_gap"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/story1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_signup_story"
                    android:textColor="@color/textColorDark"
                    android:textSize="@dimen/font_size" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_terms"
                    android:textColor="@color/textColorHighlight"
                    android:textSize="@dimen/font_size" />
                <TextView
                    android:id="@+id/story2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_signup_story1"
                    android:textColor="@color/textColorDark"
                    android:layout_marginLeft="2dp"
                    android:textSize="@dimen/font_size" />
                <TextView
                    android:id="@+id/privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/prompt_privacy"
                    android:textColor="@color/textColorHighlight"
                    android:textSize="@dimen/font_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
