<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    >
   <data>
       <variable name="sender" type="Model.SenderOrder"/>
       <variable name="item" type="Model.ItemAttributes"/>
       <variable name="pickup" type="Model.PickupOrderMapping"/>
       <variable name="delivery" type="Model.ReceiverOrderMapping"/>
       <variable name="senderorderitem" type="Model.SenderOrderItemAttributes"/>
       <import type="android.view.View"/>
    </data>
<LinearLayout
    android:id="@+id/lila"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
android:layout_marginTop="7dp"
            android:id="@+id/scheduleform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/labelPickDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginBottom="10dp"
                android:textColor="@color/textColorDark"
                android:textSize="16dp"
                android:text="@string/trip_summary" />


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/labelDepartureFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@string/departure_from" />
                <TextView
                    android:id="@+id/labelPickFlat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@={sender.from_loc}" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/labelpickFlatFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/labelDepartureaAT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@string/departure_date_time" />
                <TextView
                    android:id="@+id/labelDepartureAtst"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@={sender.from_loc}" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/labelDepartureDateForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/labelDepartureDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@string/arrival_at" />
                <TextView
                    android:id="@+id/labelDepartureAtt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@={sender.to_geo_long}" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/labelarrivaeDateForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/labelArrivalAt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@string/arr_date" />
                <TextView
                    android:id="@+id/labelarrivalAtt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@={sender.from_geo_lat}" />
            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/labelWantTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@string/wanttosend" />
                <TextView
                    android:id="@+id/labelwantotsend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@={senderorderitem.item_type}" />
            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/labelWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@string/weight" />
                <TextView
                    android:id="@+id/labelweightvalue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@={item.weight}" />
            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/labelVolumetric"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@string/volumetricweight" />
                <TextView
                    android:id="@+id/labelvolume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"

                    android:textColor="@color/textHintColor"
                    android:textSize="@dimen/font_size"
                    android:text="@={item.volumetricfullDetails}" />
            </LinearLayout>

            <TextView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="19dp"
                android:background="@color/textHintColor"/>


            <TextView
                android:id="@+id/tvp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:textSize="16dp"
                android:text="@string/pickup_details"/>

            <TextView
                android:id="@+id/tvFromAddrese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:singleLine="false"
                 android:textSize="15dp"
                android:text="@={pickup.fullAdress}"/>

            <TextView
                android:id="@+id/tvd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:textSize="16dp"
                android:text="@string/delivery_details"/>

            <TextView
                android:id="@+id/tvDeliveryAddressSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:singleLine="false"
                android:textSize="15dp"
                android:text="@={delivery.fullAdress}"/>
            <Button
                android:id="@+id/btn_sender_next"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_gap"
                android:layout_marginBottom="27dp"
                android:background="@drawable/button_outline"
                android:textSize="@dimen/font_size_hint"
                android:text="@string/proceed"
                android:textColor="@color/textColorWhite"
                android:textStyle="bold" />


</LinearLayout>
    </ScrollView>
</LinearLayout>
</layout>