<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="7dp">

    <data>

        <variable
            name="sender"
            type="Model.SenderOrder" />

        <variable
            name="carrier"
            type="Model.CarrierScheduleDetailAttributes" />

        <variable
            name="user"
            type="Model.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:src="@drawable/carrier" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_margin="7dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:text="@string/from"
                        android:textColor="@color/textHintColor"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/history_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@={sender.from_loc}"
                        android:textColor="@color/textColorDark"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_margin="7dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:text="@string/to"
                        android:textColor="@color/textHintColor"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/history_to"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:text="@={sender.to_loc}"
                        android:textColor="@color/textColorDark"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_margin="7dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:text="@string/item"
                        android:textColor="@color/textHintColor"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/item"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:text="@={carrier.mode}"
                        android:textColor="@color/textColorDark"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@={carrier.capacity}"
                android:textColor="@color/textColorDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:alpha="0.3"
            android:background="@color/textHintColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_created"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/order_created"
                android:textColor="@color/textHintColor"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/picked"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/picked"
                android:textColor="@color/textHintColor"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/intransit"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/intransit"
                android:textColor="@color/textHintColor"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/delivered"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/delivered"
                android:textColor="@color/textHintColor"
                android:textSize="11sp" />
        </LinearLayout>
<FrameLayout
    android:layout_marginBottom="7dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="57dp"
        android:layout_gravity="center"
        android:alpha="0.3"
        android:background="@color/textHintColor" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <View
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="27dp"
        android:layout_weight="1"
        android:background="@drawable/solid_circle" />
    <View
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_weight="1"
        android:layout_marginLeft="97dp"

        android:background="@drawable/solid_circle" />
    <View
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="67dp"
        android:layout_weight="1"

        android:background="@drawable/solid_circle" />
    <View
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_weight="1"
        android:layout_marginLeft="67dp"
        android:background="@drawable/solid_circle" />
</LinearLayout>

</FrameLayout >



        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:alpha="0.3"
            android:background="@color/textHintColor" />
    </LinearLayout>

</layout>